# Tech-Challenge-FIAP

./: .gitignore  ARCHITECTURE.md  README.md  banco.db  db.py  dependency.py  main.py  models.py  pyproject.toml  requeriments.txt  routes.py  schemas_.py
alembic/: env.py
alembic/versions/: 03ea457672f3_tabela_de_usuários.py
api/: dependency.py  main.py  models.py  routes.py  schemas_.py
data/: banco.db  db.py
data/alembic/versions/: 831573a83b56_correção_de_tabela.py
scripts/: scrapping.py
