[project]
name = "tech-challenge-fiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.1.0",
    "bcrypt==4.3.0",
    "beautifulsoup4>=4.13.5",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "dotenv>=0.9.9",
    "ecdsa==0.19.1",
    "et-xmlfile==2.0.0",
    "fastapi==0.116.1",
    "frozenlist==1.5.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "jose==1.0.0",
    "loguru==0.7.3",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "multidict==6.1.0",
    "notebook>=7.4.7",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pandas-stubs>=2.3.2.250926",
    "passlib==1.7.4",
    "propcache==0.2.1",
    "psycopg2-binary>=2.9.10",
    "pyasn1==0.6.1",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "sqlalchemy-utils==0.42.0",
    "starlette==0.47.3",
    "tdqm>=0.0.1",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.35.0",
    "win32-setctime==1.2.0",
    "word2number>=1.1",
    "yarl==1.18.3",
]
